--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -48,6 +48,7 @@ jobs:
           ${{ runner.os }}-deps-
 
     - name: Set up dependencies
+      shell: bash
       run: |
         if [[ ! -d "BambuStudio_dep" ]]; then
           mkdir BambuStudio_dep
@@ -57,6 +58,7 @@ jobs:
           cmake ../ -G "Visual Studio 16 2019" -DDESTDIR="${{ github.workspace }}/BambuStudio_dep" -DCMAKE_BUILD_TYPE=Release
           msbuild /m ALL_BUILD.vcxproj
         fi
+        
     - name: Build Bambu Studio
       run: |
         mkdir install_dir
