Refactor build setup in cmake-multi-platform.yml

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -38,17 +38,16 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-deps-
 
+    
     - name: Set up dependencies
-      shell: pwsh
       run: |
-        if (!(Test-Path -Path "BambuStudio_dep")) {
-          New-Item -ItemType Directory -Force -Path "BambuStudio_dep"
-          Set-Location -Path deps
-          New-Item -ItemType Directory -Force -Path build
-          Set-Location -Path build
-          cmake ../ -G "Visual Studio 16 2019" -DDESTDIR="${{ github.workspace }}/BambuStudio_dep" -DCMAKE_BUILD_TYPE=Release
-          & "msbuild /m ALL_BUILD.vcxproj
-        }
+        mkdir BambuStudio_dep
+        cd deps
+        mkdir build
+        cd build
+        cmake ../ -G "Visual Studio 16 2019" -DDESTDIR="${{ github.workspace }}/BambuStudio_dep" -DCMAKE_BUILD_TYPE=Release
+        msbuild /m ALL_BUILD.vcxproj
+
         
     - name: Build Bambu Studio
       run: |
