--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -76,3 +76,17 @@ jobs:
     #   with:
     #     name: BambuStudio_exe
     #     path: ./**/*.exe
+
+    - name: Install NSIS
+      run: |
+        choco install nsis
+
+    - name: Build installer
+      run: |
+        makensis /DPRODUCT_VERSION=1.0.0 /DPRODUCT_NAME="Bambu Studio SDH" /DINSTALLER_FILE_NAME="BambuStudioInstaller" /DPRODUCT_PUBLISHER="INUSHA" /DPRODUCT_WEB_SITE="http://www.example.com" /DINPUT_DIRECTORY="${{ github.workspace }}/install_dir" /DOUTPUT_DIRECTORY="${{ github.workspace }}/installer" "${{ github.workspace }}/path/to/installer/script.nsi"
+
+    - name: Upload installer
+      uses: actions/upload-artifact@v2
+      with:
+        name: BambuStudioInstaller_exe
+        path: ./installer/BambuStudioInstaller.exe
