--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -55,14 +55,7 @@ jobs:
         mkdir build
         cd build
         cmake .. -G "Visual Studio 16 2019" -DBBL_RELEASE_TO_PUBLIC=1 -DCMAKE_PREFIX_PATH="${{ github.workspace }}/BambuStudio_dep/usr/local"  -DCMAKE_INSTALL_PREFIX="../install_dir" -DCMAKE_BUILD_TYPE=Release -DWIN10SDK_PATH="C:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0"
-        cmake --build . --target install --config Release
-
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: BambuStudio_exe
-        path: ./install_dir/bambu-studio.exe    
+        cmake --build . --target install --config Release 
 
 
     - name: Upload artifact2
@@ -84,10 +77,10 @@ jobs:
     - name: Build installer
       run: |
         mkdir installer
-        makensis /DPRODUCT_VERSION=1.0.0 /DPRODUCT_NAME="Bambu Studio SDH" /DINSTALLER_FILE_NAME="BambuStudioInstaller" /DPRODUCT_PUBLISHER="INUSHA" /DPRODUCT_WEB_SITE="http://www.example.com" /DINPUT_DIRECTORY="${{ github.workspace }}/install_dir" /DOUTPUT_DIRECTORY="${{ github.workspace }}/installer" "${{ github.workspace }}/path/to/installer/script.nsi"
+        makensis /DPRODUCT_VERSION=1.0.0 /DPRODUCT_NAME="Bambu Studio SDH" /DINSTALLER_FILE_NAME="BambuStudioInstaller" /DPRODUCT_PUBLISHER="INUSHA" /DPRODUCT_WEB_SITE="http://www.example.com" /DINPUT_DIRECTORY="${{ github.workspace }}/install_dir" /DOUTPUT_DIRECTORY="${{ github.workspace }}/installer" "${{ github.workspace }}/install.nsi"
 
     - name: Upload installer
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: BambuStudioInstaller_exe
         path: ./installer
