--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -79,8 +79,16 @@ jobs:
         mkdir installer
         makensis /DPRODUCT_VERSION=1.0.0 /DPRODUCT_NAME="Bambu Studio SDH" /DINSTALLER_FILE_NAME="BambuStudioInstaller" /DPRODUCT_PUBLISHER="INUSHA" /DPRODUCT_WEB_SITE="http://www.example.com" /DINPUT_DIRECTORY="${{ github.workspace }}/install_dir" /DOUTPUT_DIRECTORY="${{ github.workspace }}/installer" "${{ github.workspace }}/install.nsi"
 
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Find and upload installer
+      run: |
+        FILE_PATH=$(find . -name "BambuStudio_SDH_Setup.exe")
+        echo "FILE_PATH=$FILE_PATH" >> $GITHUB_ENV
+
     - name: Upload installer
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v2
       with:
-        name: BambuStudioInstaller_exe
-        path: ./installer
+        name: BambuStudio_SDH_Setup
+        path: ${{ env.FILE_PATH }}
